# skillify

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SKILL.md  install.sh  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  deploy-docs.yml  pr-title.yml  release.yml  test-docs.yml
prompts/: generate_skill.md  rest_api_reference.md
scripts/: find_session.py  gather_context.py  parse_agent_output.py  parse_conversation.py  validate_skill.py
tests/: conftest.py  test_find_session.py  test_gather_context.py  test_parse_agent_output.py  test_parse_conversation.py  test_validate_skill.py
tests/fixtures/: correction_conversation.jsonl  malformed_lines.jsonl  minimal_conversation.jsonl
website/: README.md  docusaurus.config.js  package-lock.json  package.json
website/blog/: authors.yml
website/blog/2026-06-15-conversations-are-prototypes/: index.md
website/blog/2026-06-15-welcome/: index.md
website/src/css/: custom.css
website/src/pages/: index.js  index.module.css
