[project]
name = "skillify"
version = "0.2.0"
description = "Convert Claude Code conversations into deterministic Python-scripted skills"
requires-python = ">=3.12"
license = "MIT"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.11",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["scripts", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.coverage.run]
source = ["scripts"]

[tool.coverage.report]
show_missing = true
skip_empty = true
